# TrackingInfoRate

./: .gitignore  ITscript.py  __init__.py  buildCSVfiles_81Y.m  buildCSVfiles_81Y_titr.m  buildCSVfiles_83Y.m  buildCSVfiles_EMG.m  concat_outputs.py  exampleData.csv  fix83Y_noRx.py  information_transfer.py  main.py  plotting.py  plotting_titr.py  preprocess.py  process_diagnostics.py  pyproject.toml  readme.md  run_infotransfer.py  setup.py  stats.py
TrackingInfoTransfer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
exampleData/: 81Y1_block3_cond1.csv  81Y1_block4_cond4.csv  81Y1_block5_cond2.csv
exampleData_out/: diagnostics.csv  output_81Y1_block3_cond1.csv  output_81Y1_block4_cond4.csv  output_81Y1_block5_cond2.csv
matlab_files/: buildCSVfiles_81Y.m  buildCSVfiles_81Y_titr.m
